# pycups

./: .gitignore  Makefile  README.md  build_ffi.py  pyproject.toml  setup.py  test.py
.github/workflows/: test.yaml
cups/: __init__.py  build_cups.py  creds.py  cupslang.py  cupsoauth.py  dests.py  generic.py  options.py  types.py  utils.py
cups/connection/: __init__.py  base.py  dests.py  document.py  ipp.py  jobs.py  options.py
cups/enums/: __init__.py  cups.py  encoding.py  http.py  ipp.py  jobs.py  media.py
cups/headers/: array.h  base.h  cups.h  dir.h  dnssd.h  file.h  form.h  http.h  ipp.h  json.h  jwt.h  language.h  oauth.h  pwg.h  raster.h  thread.h  transcode.h
cups/types/: __init__.py  base.py  cups.py  http.py  httpaddr.py  ipp.py  media.py
cups/types/cups/: __init__.py  dest.py  destinfo.py  job.py  jwt.py  lang.py  mutex.py  option.py  pageheader.py  raster.py  rwlock.py
test/: test.py
