[project]
name = "cups"
description = "Python bindings and helpers for libcups"
version = "3.0.0"
authors = [
    {name = "Soumyadeep Ghosh", email = "soumyadeepghosh2004@zohomail.in"}
]
readme = "README.md"
dependencies = [
    "cffi>=1.17.1",
]
classifiers=[
        "Programming Language :: Python :: 3",
        "Operating System :: POSIX :: Linux",
        "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.9"

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "cffi>=1.17.1",
    "pkgconfig>=1.5.5"
]
build-backend = "setuptools.build_meta"

[dependency-groups]
lint = [
  "mypy~=1.17",
  "types-cffi~=1.17",
]

[tool.ruff]
line-length = 88
target-version = "py39"
src = ["cups"]

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"
quote-style = "double"

[tool.ruff.lint]
# Handy link: https://docs.astral.sh/ruff/rules/
select = [ # Base linting rule selections.
    # See the internal document for discussion:
    # https://docs.google.com/document/d/1i1n8pDmFmWi4wTDpk-JfnWCVUThPJiggyPi2DYwBBu4/edit
    # All sections here are stable in ruff and shouldn't randomly introduce
    # failures with ruff updates.
    "F",     # The rules built into Flake8
    "E",
    "W",     # pycodestyle errors and warnings
    "I",     # isort checking
    "N",     # PEP8 naming
    "D",     # Implement pydocstyle checking as well.
    "UP",    # Pyupgrade - note that some of are excluded below due to Python versions
    "YTT",   # flake8-2020: Misuse of `sys.version` and `sys.version_info`
    "ANN",   # Type annotations.
    "ASYNC", # Catching blocking calls in async functions
    # flake8-bandit: security testing. https://docs.astral.sh/ruff/rules/#flake8-bandit-s
    # https://bandit.readthedocs.io/en/latest/plugins/index.html#complete-test-plugin-listing
    "S101",
    "S102", # assert or exec
    "S103",
    "S108", # File permissions and tempfiles - use #noqa to silence when appropriate.
    "S104", # Network binds
    "S105",
    "S106",
    "S107", # Hardcoded passwords
    "S110", # try-except-pass (use contextlib.suppress instead)
    "S113", # Requests calls without timeouts
    "S3",   # Serialising, deserialising, hashing, crypto, etc.
    "S5",   # Unsafe cryptography or YAML loading.
    "S602", # Subprocess call with shell=true
    "S701", # jinja2 templates without autoescape
    "BLE",  # Do not catch blind exceptions
    "FBT",  # Disallow boolean positional arguments (make them keyword-only)
    "B0",   # Common mistakes and typos.
    "A",    # Shadowing built-ins.
    "COM",  # Trailing commas
    "C4",   # Encourage comprehensions, which tend to be faster than alternatives.
    "T10",  # Don't call the debugger in production code
    "ISC",  # Implicit string concatenation that can cause subtle issues
    "ICN",  # Only use common conventions for import aliases.
    "INP",  # Implicit namespace packages
    # flake8-pie: miscellaneous linters (enabled individually because they're not really related)
    "PIE790", # Unnecessary pass statement
    "PIE794", # Multiple definitions of class field
    "PIE796", # Duplicate value in an enum (reasonable to noqa for backwards compatibility)
    "PIE804", # Don't use a dict with unnecessary kwargs
    "PIE807", # prefer `list` over `lambda: []`
    "PIE810", # Use a tuple rather than multiple calls. E.g. `mystr.startswith(("Hi", "Hello"))`
    "PYI",    # Linting for type stubs.
    "PT",     # Pytest
    "Q",      # Consistent quotations
    "RSE",    # Errors on pytest raises.
    "RET",    # Simpler logic after return, raise, continue or break
    "SLF",    # Prevent accessing private class members.
    "SIM",    # Code simplification
    "TID",    # Tidy imports
    "TC001",  # Checks for first-party imports that are only used for type annotations
    "TC002",  # Checks for third-party imports that are only used for type annotations
    "TC003",  # Checks for standard library imports that are only used for type annotations
    "TC004",  # Remove imports from type-checking guard blocks if used at runtime
    "TC005",  # Delete empty type-checking blocks
    "ARG",    # Unused arguments
    "PTH",    # Migrate to pathlib
    "FIX",    # All TODOs, FIXMEs, etc. should be turned into issues instead.
    "ERA",    # Don't check in commented out code
    "PGH",    # Pygrep hooks
    "PL",     # Pylint
    "TRY",    # Cleaner try/except,
    "FLY",    # Detect things that would be better as f-strings.
    "PERF",   # Catch things that can slow down the application like unnecessary casts to list.
    "RUF001",
    "RUF002",
    "RUF003", # Ambiguous unicode characters
    "RUF005", # Encourages unpacking rather than concatenation
    "RUF008", # Do not use mutable default values for dataclass attributes
    "B035",   # Don't use static keys in dict comprehensions.
    "RUF013", # Prohibit implicit Optionals (PEP 484)
    "RUF100", # #noqa directive that doesn't flag anything
    "RUF200", # If ruff fails to parse pyproject.toml...
]
ignore = [
    "E501",   # Line too long (reason: ruff will automatically fix this for us)
    "D105",   # Missing docstring in magic method (reason: magic methods already have definitions)
    "D107",   # Missing docstring in __init__ (reason: documented in class docstring)
    "D203",   # 1 blank line required before class docstring (reason: pep257 default)
    "D213",   # Multi-line docstring summary should start at the second line (reason: pep257 default)
    "D215",   # Section underline is over-indented (reason: pep257 default)
    "A003",   # Class attribute shadowing built-in (reason: Class attributes don't often get bare references)
    "SIM117", # Use a single `with` statement with multiple contexts instead of nested `with` statements
    # (reason: this creates long lines that get wrapped and reduces readability)
    "PLW1641", # eq-without-hash (most of our classes should be unhashable)

    # Ignored due to conflicts with ruff's formatter:
    # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "COM812", # Missing trailing comma - mostly the same, but marginal differences.
    "ISC001", # Single-line implicit string concatenation.
]
